# parsec-ecolab

./: .gitignore  README  replace-perl-compatibility.sh
config/: gcc-hooks.bldconf  gcc.bldconf
scripts/: binary-run.sh  busy_spin.c  check-mapping.sh  clean-build.sh  experiments_2018-08-20.txt  experiments_2018-08-21-exp1.txt  experiments_2018-08-21-exp2.txt  likwid_profiling.sh  msr_test.sh  prefix-binary-run-4threads.sh  prefix-binary-run.sh  risk_blackscholes.sh  run-all-singlethreaded.sh  run-all.sh  run-blackscholes.sh  run-bodytrack.sh  run-canneal.sh  run-dedup.sh  run-facesim.sh  run-ferret.sh  run-fluidanimate.sh  run-freqmine.sh  run-raytrace.sh  run-streamcluster.sh  run-swaptions.sh  run-vips.sh  run-x264.sh  sched-run.sh  tes.sh  thrd_cpu_map.csv  vtune_dump_stat.sh  vtune_test.sh
scripts/dump/: experiments_2018-08-22.txt  output.txt
scripts/group_test_case1/: cache_events_native_4nth_0-1-64-65.txt  cache_events_native_4nth_0-64-128-192.txt
scripts/scheduler/: CMakeLists.txt
scripts/scheduler/debug/: CMakeCache.txt  Makefile  cmake_install.cmake  sched
scripts/scheduler/include/: cpu_topology.h  exp.h  launch_app.h  pretty_print.h  sched_params.h
scripts/scheduler/src/: busy_spin.c  cpu_topology.c  discarded_c  exp.c  exp_alloc_16nth_c  exp_alloc_32nth_c  exp_alloc_4nth_c  exp_alloc_8nth_c  launch_app.c  sched.c
scripts/static_maps/: copy.py  copy_16nth.py  copy_32nth.py  copy_4nth.py  copy_8nth.py  copy_skx.py  exp12c.csv  exp1a_alloc1.csv  exp1a_alloc2.csv  exp1b_alloc1.csv  exp2a_alloc2.csv  exp2b_alloc1.csv  exp2b_alloc2.csv  exp2e.csv
(+41 files in other folders)
